force-app/main/default/objects/Account/fields/DisHisRegType__c.field-meta.xml
<CustomField>
    <fullName>DisHisRegType__c</fullName>
    <label>DisHisRegType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>수입</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>유통업자</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>소매업자</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>최종소비자</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>수출</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>손실량</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>