force-app/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2991</fullName>
                <label>글로벌)JV2설맅추진팀</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>