force-app/main/default/objects/Account/fields/dlv_agc_nm__c.field-meta.xml
<CustomField>
    <fullName>dlv_agc_nm__c</fullName>
    <label>dlv_agc_nm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>