force-app/main/default/objects/Account/fields/dstfd_mtd_cd__c.field-meta.xml
<CustomField>
    <fullName>dstfd_mtd_cd__c</fullName>
    <label>dstfd_mtd_cd</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <label>교실</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>교실+식당</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>식당</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>기타</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>