force-app/main/default/objects/Account/fields/dtlStateNm__c.field-meta.xml
<CustomField>
    <fullName>dtlStateNm__c</fullName>
    <label>dtlStateNm</label>
    <length>200</length>
    <type>Text</type>
</CustomField>