force-app/main/default/objects/Account/fields/EastSales__c.field-meta.xml
<CustomField>
    <fullName>EastSales__c</fullName>
    <label>East Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>