force-app/main/default/objects/Account/fields/ecof_fdr_us_rt__c.field-meta.xml
<CustomField>
    <fullName>ecof_fdr_us_rt__c</fullName>
    <label>ecof_fdr_us_rt</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>