force-app/main/default/objects/Account/fields/facilTotScp__c.field-meta.xml
<CustomField>
    <fullName>facilTotScp__c</fullName>
    <label>facilTotScp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>