force-app/main/default/objects/Account/fields/fctyPdtJobEpCnt__c.field-meta.xml
<CustomField>
    <fullName>fctyPdtJobEpCnt__c</fullName>
    <label>fctyPdtJobEpCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>