force-app/main/default/objects/Account/fields/fctySilJobEpCnt__c.field-meta.xml
<CustomField>
    <fullName>fctySilJobEpCnt__c</fullName>
    <label>fctySilJobEpCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>