force-app/main/default/objects/Account/fields/fm_empId__c.field-meta.xml
<CustomField>
    <fullName>fm_empId__c</fullName>
    <formula>Owner.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>담당자 사번</label>
    <type>Text</type>
</CustomField>