force-app/main/default/objects/Account/fields/fm_empname__c.field-meta.xml
<CustomField>
    <fullName>fm_empname__c</fullName>
    <description>고객사 담당 MA 명</description>
    <formula>Owner.LastName</formula>
    <label>고객사 MA 명</label>
    <type>Text</type>
</CustomField>