force-app/main/default/objects/Account/fields/fm_FriendshipScore__c.field-meta.xml
<CustomField>
    <fullName>fm_FriendshipScore__c</fullName>
    <formula>IF( Text(FriendshipScore__c) = &quot;상&quot;, 3, IF( Text(FriendshipScore__c) = &quot;중&quot;, 2, IF( Text(FriendshipScore__c) = &quot;하&quot;, 1, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_FriendshipScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>