force-app/main/default/objects/Account/fields/fm_SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>fm_SalesGroup__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <label>Sales Group</label>
    <type>Text</type>
</CustomField>