force-app/main/default/objects/Account/fields/fm_SalesPerStore__c.field-meta.xml
<CustomField>
    <fullName>fm_SalesPerStore__c</fullName>
    <formula>SalesMonthly__c / NumberOfStore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Per Store</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>