force-app/main/default/objects/Account/fields/fm_SizeScore__c.field-meta.xml
<CustomField>
    <fullName>fm_SizeScore__c</fullName>
    <formula>IF( NumberOfEmployees &gt;= 1300 , 4 , IF(NumberOfEmployees &gt;= 900, 3, IF(NumberOfEmployees &gt;=500, 2, 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>[ 4 Point = Company Size &gt;= 1300 ] [ 3 Point = Company Size &gt;= 900 ] [ 2 Point = Company Size &gt;= 500 ] [ 1 Point = Company Size &lt; 500 ]</inlineHelpText>
    <label>Size Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>