force-app/main/default/objects/Account/fields/fm_TotalScore__c.field-meta.xml
<CustomField>
    <fullName>fm_TotalScore__c</fullName>
    <formula>fm_SizeScore__c + fm_MonthlySalesScore__c +  fm_FriendshipScore__c</formula>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>