force-app/main/default/objects/Account/fields/FoodPrice__c.field-meta.xml
<CustomField>
    <fullName>FoodPrice__c</fullName>
    <label>FoodPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>