force-app/main/default/objects/Account/fields/Foundation__c.field-meta.xml
<CustomField>
    <fullName>Foundation__c</fullName>
    <label>Foundation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>