force-app/main/default/objects/Account/fields/FWReleaseCenterFromDate__c.field-meta.xml
<CustomField>
    <fullName>FWReleaseCenterFromDate__c</fullName>
    <label>FWReleaseCenterFromDate</label>
    <type>Date</type>
</CustomField>