force-app/main/default/objects/Account/fields/HeadOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>HeadOfficeCode__c</fullName>
    <label>HeadOffice Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>