force-app/main/default/objects/Account/fields/HeadOfficeName__c.field-meta.xml
<CustomField>
    <fullName>HeadOfficeName__c</fullName>
    <label>HeadOfficeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>