force-app/main/default/objects/Account/fields/hoffEpCnt__c.field-meta.xml
<CustomField>
    <fullName>hoffEpCnt__c</fullName>
    <label>hoffEpCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>