force-app/main/default/objects/Account/fields/InitialDeliveryContact__c.field-meta.xml
<CustomField>
    <fullName>InitialDeliveryContact__c</fullName>
    <label>InitialDeliveryContact</label>
    <type>Phone</type>
</CustomField>