force-app/main/default/objects/Account/fields/InitialDeliveryDescription__c.field-meta.xml
<CustomField>
    <fullName>InitialDeliveryDescription__c</fullName>
    <label>InitialDeliveryDescription</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>