force-app/main/default/objects/Account/fields/InitialDeliveryRequestDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDeliveryRequestDate__c</fullName>
    <label>InitialDeliveryRequestDate</label>
    <type>Date</type>
</CustomField>