force-app/main/default/objects/Account/fields/InitialDeliveryRequestTime__c.field-meta.xml
<CustomField>
    <fullName>InitialDeliveryRequestTime__c</fullName>
    <label>InitialDeliveryRequestTime</label>
    <length>100</length>
    <type>Text</type>
</CustomField>