force-app/main/default/objects/Account/fields/InitialDeliveryShare__c.field-meta.xml
<CustomField>
    <fullName>InitialDeliveryShare__c</fullName>
    <label>InitialDeliveryShare</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>