force-app/main/default/objects/Account/fields/IsAffiliatedcompanyYN__c.field-meta.xml
<CustomField>
    <fullName>IsAffiliatedcompanyYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAffiliatedcompanyYN</label>
    <type>Checkbox</type>
</CustomField>