force-app/main/default/objects/Account/fields/IsBusinessPlaceKey__c.field-meta.xml
<CustomField>
    <fullName>IsBusinessPlaceKey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBusinessPlaceKey</label>
    <type>Checkbox</type>
</CustomField>