force-app/main/default/objects/Account/fields/IsDeliver__c.field-meta.xml
<CustomField>
    <fullName>IsDeliver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deliver</label>
    <type>Checkbox</type>
</CustomField>