force-app/main/default/objects/Account/fields/IsDeposit__c.field-meta.xml
<CustomField>
    <fullName>IsDeposit__c</fullName>
    <label>IsDeposit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>개별 입금</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>합산 입금</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>