force-app/main/default/objects/Account/fields/IsElectronicBidYN__c.field-meta.xml
<CustomField>
    <fullName>IsElectronicBidYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Electronic Bid YN</label>
    <type>Checkbox</type>
</CustomField>