force-app/main/default/objects/Account/fields/IsFaceToFaceInspectionStatus__c.field-meta.xml
<CustomField>
    <fullName>IsFaceToFaceInspectionStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDM 대면검수여부</description>
    <label>IsFaceToFaceInspectionStatus</label>
    <type>Checkbox</type>
</CustomField>