force-app/main/default/objects/Account/fields/IsHeadShopUseYN__c.field-meta.xml
<CustomField>
    <fullName>IsHeadShopUseYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHeadShopUseYN</label>
    <type>Checkbox</type>
</CustomField>