force-app/main/default/objects/Account/fields/IsInitialDeliveryFTFInspection__c.field-meta.xml
<CustomField>
    <fullName>IsInitialDeliveryFTFInspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInitialDeliveryFTFInspection</label>
    <type>Checkbox</type>
</CustomField>