force-app/main/default/objects/Account/fields/IsPrintVirtualAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPrintVirtualAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDM 가상계좌 출력 제외</description>
    <label>IsPrintVirtualAccount</label>
    <type>Checkbox</type>
</CustomField>