force-app/main/default/objects/Account/fields/isreAm__c.field-meta.xml
<CustomField>
    <fullName>isreAm__c</fullName>
    <label>isreAm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>