force-app/main/default/objects/Account/fields/IsRequestMDMReg__c.field-meta.xml
<CustomField>
    <fullName>IsRequestMDMReg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRequestMDMReg</label>
    <type>Checkbox</type>
</CustomField>