force-app/main/default/objects/Account/fields/IsSentToSma__c.field-meta.xml
<CustomField>
    <fullName>IsSentToSma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sma 연동 여부</label>
    <type>Checkbox</type>
</CustomField>