force-app/main/default/objects/Account/fields/isSystem_SMA__c.field-meta.xml
<CustomField>
    <fullName>isSystem_SMA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSystem_SMA</label>
    <type>Checkbox</type>
</CustomField>