force-app/main/default/objects/Account/fields/IsUseHeadOffice__c.field-meta.xml
<CustomField>
    <fullName>IsUseHeadOffice__c</fullName>
    <label>Use HeadOffice</label>
    <length>1</length>
    <type>Text</type>
</CustomField>