force-app/main/default/objects/Account/fields/JejuSales__c.field-meta.xml
<CustomField>
    <fullName>JejuSales__c</fullName>
    <label>Jeju Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>