force-app/main/default/objects/Account/fields/jrsdt_cido_eduofic_cd__c.field-meta.xml
<CustomField>
    <fullName>jrsdt_cido_eduofic_cd__c</fullName>
    <label>jrsdt_cido_eduofic_cd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>서울</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>경기</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>인천</label>
            </value>
            <value>
                <fullName>130</fullName>
                <label>강원도</label>
            </value>
            <value>
                <fullName>140</fullName>
                <label>대전</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>충남</label>
            </value>
            <value>
                <fullName>160</fullName>
                <label>충북</label>
            </value>
            <value>
                <fullName>170</fullName>
                <label>부산</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>대구</label>
            </value>
            <value>
                <fullName>190</fullName>
                <label>울산</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>경남</label>
            </value>
            <value>
                <fullName>210</fullName>
                <label>경북</label>
            </value>
            <value>
                <fullName>220</fullName>
                <label>광주</label>
            </value>
            <value>
                <fullName>230</fullName>
                <label>전남</label>
            </value>
            <value>
                <fullName>240</fullName>
                <label>전북</label>
            </value>
            <value>
                <fullName>250</fullName>
                <label>제주</label>
            </value>
            <value>
                <fullName>세종</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>