force-app/main/default/objects/Account/fields/jrsdt_gugun_eduofic_cd__c.field-meta.xml
<CustomField>
    <fullName>jrsdt_gugun_eduofic_cd__c</fullName>
    <label>jrsdt_gugun_eduofic_cd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>jrsdt_cido_eduofic_cd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1001</fullName>
                <label>강남(1001)</label>
            </value>
            <value>
                <fullName>1002</fullName>
                <label>강동</label>
            </value>
            <value>
                <fullName>1003</fullName>
                <label>강서</label>
            </value>
            <value>
                <fullName>1004</fullName>
                <label>남부(1004)</label>
            </value>
            <value>
                <fullName>1005</fullName>
                <label>동부(1005)</label>
            </value>
            <value>
                <fullName>1006</fullName>
                <label>동작</label>
            </value>
            <value>
                <fullName>1007</fullName>
                <label>북부(1007)</label>
            </value>
            <value>
                <fullName>1008</fullName>
                <label>서부(1008)</label>
            </value>
            <value>
                <fullName>1009</fullName>
                <label>성동</label>
            </value>
            <value>
                <fullName>1010</fullName>
                <label>성북</label>
            </value>
            <value>
                <fullName>1011</fullName>
                <label>중부</label>
            </value>
            <value>
                <fullName>1101</fullName>
                <label>가평</label>
            </value>
            <value>
                <fullName>1102</fullName>
                <label>고양</label>
            </value>
            <value>
                <fullName>1103</fullName>
                <label>광명</label>
            </value>
            <value>
                <fullName>1104</fullName>
                <label>광주하남</label>
            </value>
            <value>
                <fullName>1105</fullName>
                <label>군포의왕</label>
            </value>
            <value>
                <fullName>1106</fullName>
                <label>김포</label>
            </value>
            <value>
                <fullName>1107</fullName>
                <label>구리남양주</label>
            </value>
            <value>
                <fullName>1108</fullName>
                <label>동두천양주</label>
            </value>
            <value>
                <fullName>1109</fullName>
                <label>부천</label>
            </value>
            <value>
                <fullName>1110</fullName>
                <label>성남</label>
            </value>
            <value>
                <fullName>1111</fullName>
                <label>수원</label>
            </value>
            <value>
                <fullName>1112</fullName>
                <label>시흥</label>
            </value>
            <value>
                <fullName>1113</fullName>
                <label>안산</label>
            </value>
            <value>
                <fullName>1114</fullName>
                <label>안성</label>
            </value>
            <value>
                <fullName>1115</fullName>
                <label>안양과천</label>
            </value>
            <value>
                <fullName>1116</fullName>
                <label>양평</label>
            </value>
            <value>
                <fullName>1121</fullName>
                <label>이천</label>
            </value>
            <value>
                <fullName>1122</fullName>
                <label>파주</label>
            </value>
            <value>
                <fullName>1123</fullName>
                <label>평택</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>