force-app/main/default/objects/Account/fields/KXOTDRequestDate__c.field-meta.xml
<CustomField>
    <fullName>KXOTDRequestDate__c</fullName>
    <label>KXOTDRequestDate</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>