force-app/main/default/objects/Account/fields/LegalStatus__c.field-meta.xml
<CustomField>
    <fullName>LegalStatus__c</fullName>
    <label>LegalStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>개인</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>영리법인</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>비영리법인</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>