force-app/main/default/objects/Account/fields/lnc_mlcnt__c.field-meta.xml
<CustomField>
    <fullName>lnc_mlcnt__c</fullName>
    <label>lnc_mlcnt</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>